[gd_scene load_steps=3 format=3 uid="uid://b3gec65rvk0eo"]

[ext_resource type="Script" path="res://Scripts/SupportScripts/spawn.gd" id="1_n5td1"]

[sub_resource type="Curve2D" id="Curve2D_7vi2s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -4.87318, 0, 0, 0, 0, 3200.04, -8.12196, 0, 0, 0, 0, 3208.29, 1820.94, 0, 0, 0, 0, -6.59803, 1814.45, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Spawn" type="Node2D"]
script = ExtResource("1_n5td1")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2(-9, -10.04)
scale = Vector2(0.606242, 0.610694)
curve = SubResource("Curve2D_7vi2s")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(0, -4.87318)
rotation = -0.00101523

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
